...
                                    <constraint firstItem="6R2-Tf-mcx" firstAttribute="width" secondItem="cKh-MQ-dxI" secondAttribute="width" id="f5Q-N3-1sj"/>
                                </constraints>
                            </stackView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fZY-Du-b6H">
                                <rect key="frame" x="201" y="504" width="198" height="72"/>
                                <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="17"/>
                                <state key="normal" title="Save">
                                    <color key="titleColor" red="0.1215686275" green="0.12941176469999999" blue="0.14117647059999999" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="saveButtonTapped:" destination="YLX-7c-BHf" eventType="touchUpInside" id="piQ-B1-Klw"/>
                                </connections>
                            </button>
...
                                <rect key="frame" x="275" y="530" width="50" height="50"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="2gx-Eq-Nmi"/>
                                    <constraint firstAttribute="width" constant="50" id="gWo-Zb-OlA"/>
                                </constraints>
                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <state key="normal" title="Button" image="home"/>
                                <connections>
                                    <action selector="homeButtonTapped:" destination="3H7-w6-z11" eventType="touchUpInside" id="Ydl-Wi-p3M"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZKh-Fx-fyE" userLabel="Save Button">
                                <rect key="frame" x="341" y="530" width="50" height="50"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <state key="normal" backgroundImage="saveicon"/>
                                <connections>
                                    <action selector="saveButtonPressed" destination="3H7-w6-z11" eventType="touchUpInside" id="TfR-TS-Sm6"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GkD-Eg-T8w" userLabel="Image Save Button">
                                <rect key="frame" x="204" y="529" width="55" height="52"/>
...
