...
                            <constraint firstAttribute="trailing" secondItem="eAq-rk-gkT" secondAttribute="trailing" constant="8" id="fME-Au-8lc"/>
                            <constraint firstItem="cLG-0U-CbY" firstAttribute="top" secondItem="NWD-Sd-54i" secondAttribute="bottom" id="fXe-HD-EPd"/>
                            <constraint firstAttribute="trailing" secondItem="rO9-3F-7ml" secondAttribute="trailing" id="trh-Ra-qQw"/>
                            <constraint firstItem="rO9-3F-7ml" firstAttribute="top" secondItem="rhP-Oa-X9q" secondAttribute="bottom" id="ynw-mn-0JU"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="4Plan" id="VmF-tQ-BaW">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="vLR-YK-VbY">
                            <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
                                <segue destination="HXn-kU-QRz" kind="show" identifier="Show Floorplan Picker" id="do8-f6-3Kd"/>
                            </connections>
                        </barButtonItem>
...
